feat: mobile role-aware, JWT role claim, UML sang Mermaid, fix review
- Backend: nhung role vao JWT; tu tao Employee khi dang ky (tach ho/ten); sua W2/W5/W6
- Mobile: giao dien theo vai tro (employee/manager/admin); hien loi thay vi nuot im lang
- Frontend: redesign landing + auth (teal, bo AI-purple/Inter) theo taste-skill
- Docs: UML chuyen sang Mermaid (README, UML_DIAGRAMS.md); them REVIEW.md
- Chore: gitignore build/tooling (.codegraph, .agents, mobile/build) + backup